--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,13 @@
   background-color: var(--secondary);
 }
 
-#cursor {
+.cursor {
   height: 30px;
   width: 30px;
   border: 3px solid var(--secondary);
   border-radius: 50%;
   position: fixed;
-  z-index: 10;
+  z-index: 100;
 }
 
 body,
@@ -504,9 +504,9 @@ footer{
 .signup-card h1 {
   margin-bottom: 20px;
   color: var(--primary);
-  text-transform: uppercase;
+  /* text-transform: uppercase;
   font-weight: 900;
-  word-spacing: 10px;
+  word-spacing: 10px; */
 }
 
 form input {
@@ -564,7 +564,7 @@ button {
   text-align: center;
 }
 
-.login-card h2 {
+.login-card h1 {
   margin-bottom: 20px;
   color: var(--primary);
 }
